hphp/hack/test/typecheck/enum_class/enum_class_this_ref.php.exp
ERROR: File "enum_class_this_ref.php", line 6, characters 17-21:
`$this` cannot be used inside an enum class (Parsing[1002])
ERROR: File "enum_class_this_ref.php", line 6, characters 17-21:
Variable `$this` is undefined, or not always defined. (Naming[2050])
